add style 1-gallery

--- a/src/css/1-gallery.css
+++ b/src/css/1-gallery.css
@@ -26,3 +26,12 @@ ol {
 .gallery-image:focus {
   transform: scale(1.1);
 }
+.sl-wrapper.simple-lightbox > .sl-counter,
+.sl-wrapper.simple-lightbox .sl-navigation button,
+.sl-wrapper.simple-lightbox .sl-close {
+  color: #fff !important;
+}
+
+.sl-wrapper.simple-lightbox {
+  background-color: #2e2f42cc !important;
+}
