--- a/src/css/1-gallery.css
+++ b/src/css/1-gallery.css
@@ -1,3 +1,11 @@
+a {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
 ul,
 ol {
   margin-top: 0;
