--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -1,3 +1,11 @@
+a {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
 .feedback-form {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -7,50 +15,65 @@
   color: #2e2f42;
   display: flex;
   flex-direction: column;
-  margin: 24px;
-  gap: 8px;
   width: 408px;
   max-height: 296px;
+  border-radius: 8px;
+  padding: 24px;
 }
+.feedback-form label {
+  display: block;
+  max-width: 100%;
+}
+/* .feedback-form textarea,
+.feedback-form input {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px;
+} */
+
 .feedback-form input {
   border: 1px solid #808080;
   border-radius: 4px;
-  width: 360px;
+  width: 100%;
   height: 40px;
-  display: flex;
-  flex-direction: column;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: auto;
+  display: block;
+  padding: 8px 16px;
   color: #2e2f42;
   margin-top: 8px;
+  box-sizing: border-box;
+  margin-bottom: 8px;
 }
 
 .feedback-form textarea {
+  box-sizing: border-box;
   border: 1px solid #808080;
   border-radius: 4px;
-  width: 360px;
+  width: 100%;
   height: 80px;
-  display: flex;
-  flex-direction: column;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: auto;
+  display: block;
+  padding: 8px 16px;
   color: #2e2f42;
   margin-top: 8px;
   resize: none;
+  margin-bottom: 16px;
 }
 
 .feedback-form input:hover,
-.feedback-form input:focus .feedback-form textarea:hover,
+.feedback-form input:focus,
+.feedback-form textarea:hover,
 .feedback-form textarea:focus {
-  border: #000;
+  outline: 1px solid #000;
 }
 
 .feedback-form button {
+  display: inline-block;
   font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #fff;
   border-radius: 8px;
   border-color: transparent;
